# docs-io

./: .gitignore  LICENSE  README.md
backend/: Makefile  README.md  dev.env  docker-compose.app.yaml  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/core/settings/: app.py  base.py  development.py  production.py
backend/app/database/: session.py
