[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gladiolss <emurashin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
sqlmodel = "^0.0.22"
pydantic = "^2.9.2"
ruff = "^0.6.9"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
uvicorn = "^0.32.0"
pydantic-settings = "^2.5.2"
fastapi-async-sqlalchemy = "^0.6.1"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
